# math-problem-checker

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/processed/: step_classification.csv
data/raw/: README.md
examples/cli/: problem.txt  solution.txt
examples/inputs/: arithmetic_error.md  calculus.md  limits.md  linear_algebra.md  probability.md
examples/outputs/: arithmetic_error.json  calculus.json  limits.json  linear_algebra.json  probability.json
models/: binary_prm800k_target_adapted.joblib  tfidf_logreg.joblib
notebooks/: eda.ipynb  train_baseline.ipynb
reports/: error_analysis.md  evaluation.json  improved_binary_model_metrics.json  metrics.json  prm800k_phase2_subset_to_processbench_math_dataset_manifest.json  prm800k_phase2_subset_to_processbench_math_error_analysis.md  prm800k_phase2_subset_to_processbench_math_metrics.json  prm800k_phase2_subset_to_processbench_math_report.json  prm800k_phase2_subset_train_metrics.json  robustness_ablation.json  robustness_ablation.md  toy_predictions.json
reports/robustness_parts/: ablation_binary_current_only_with_position.json  ablation_deterministic_symbolic_overrides.json  ablation_local_context.json  ablation_remove_position_features.json  ablation_soft_symbolic_features.json  seed_123.json  seed_13.json  seed_2026.json  seed_42.json  seed_77.json
src/math_solution_analyzer/: __init__.py  checker.py  cli.py  dataset.py  evaluation.py  explanation.py  features.py  parser.py  pipeline.py  report_generator.py  schema.py  step_splitter.py
tests/: test_ml.py  test_pipeline.py
(+13 files in other folders)
