[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "math-solution-analyzer"
version = "0.1.0"
description = "MVP tool for step-by-step analysis of mathematical solutions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.2.0",
    "langchain-openai>=0.1.8",
    "openai>=1.30.0",
    "joblib>=1.4.0",
    "lightgbm>=4.6.0",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=5.6.0",
    "sympy>=1.13.0",
    "streamlit>=1.34.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "matplotlib>=3.9.0", "joblib>=1.4.0"]

[project.scripts]
math-checker = "math_solution_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
